[project]
name = "streeteasy-scraper-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "address-scraper",
    "db",
    "utils",
    "webhook",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.mypy]
python_version = "3.12"
files = ["apps/**/*.py", "packages/**/*.py"]
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
target-version = "py312"
include = ["apps/**/*.py", "packages/**/*.py"]

[tool.uv]
cache-dir=".cache"

[tool.uv.workspace]
members = ["packages/utils", "packages/db", "apps/address_scraper", "apps/webhook"]

[tool.uv.sources]
utils = { workspace = true }
db = { workspace = true }
address-scraper = { workspace = true }
webhook = { workspace = true }
