[project]
name = "streeteasy-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiometer>=1.0.0",
    "db",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "tenacity>=9.1.2",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streeteasy_scraper"]

[tool.uv.sources]
db = { workspace = true }
utils = { workspace = true }
