[project]
name = "webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webhook"]

[tool.uv.sources]
utils = { workspace = true }
db = { workspace = true }
